--- a/templates/dugout/dugout.html
+++ b/templates/dugout/dugout.html
@@ -1,5 +1,6 @@
 {% extends 'dugout/base.html' %}
 {% load static %}
+{% load humanize %}
 
 {% block content %}
 <div class="container-fluid">
@@ -56,7 +57,7 @@
                             <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Rata-Rata Umur Responden
                             </div>
                             <div class="mb-0 text-gray-800 h5 font-weight-bold">
-                                {{avg_age|floatformat:"3"}} 
+                                {{avg_age|floatformat:"1"}} tahun
                             </div>
                         </div>
                         <div class="col-auto">
@@ -70,6 +71,26 @@
         </div>
     </div>
     <div class="row">
+        <div class="mb-4 col-xl-4 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Newest Session
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{newest_session.totalScore}} ({{n_s_time_minute}}:{{n_s_time_seconds}})
+                                / {{newest_session.responden.name}} / 
+                                {{newest_session.timeEnd|naturaltime}}
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="mb-4 col-xl-4 col-md-6">
             <div class="py-2 shadow card border-left-primary h-100">
                 <div class="card-body">
@@ -109,40 +130,161 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Average Total Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{avg_session_score|floatformat:"1"}}/87
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Average Kognitif Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{avg_session_k_score|floatformat:"1"}}/29
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Average Sosio-Emosional Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{avg_session_s_score|floatformat:"1"}}/30
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Average Fisik Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{avg_session_f_score|floatformat:"1"}}/28
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Variance/Standar Deviation Total Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{variance_session_score|floatformat:"1"}}/{{stdev_session_score|floatformat:"1"}}
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Variance/Standar Deviation Kognitif Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{variance_session_k_score|floatformat:"1"}}/{{stdev_session_k_score|floatformat:"1"}}
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Variance/Standar Deviation Sosio-Emosional Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{variance_session_s_score|floatformat:"1"}}/{{stdev_session_s_score|floatformat:"1"}}
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mb-4 col-xl-3 col-md-6">
+            <div class="py-2 shadow card border-left-primary h-100">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="mr-2 col">
+                            <div class="mb-1 text-xs font-weight-bold text-primary text-uppercase">Variance/Standar Deviation Fisik Score
+                            </div>
+                            <div class="mb-0 text-gray-800 h5 font-weight-bold">
+                                {{variance_session_f_score|floatformat:"1"}}/{{stdev_session_f_score|floatformat:"1"}}
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-user" aria-hidden="true" ></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="container-fluid">
 
     <!--Chart   -->
     <div class="row">
-        <div class="col-xl-6 col-md-12">
-            <div class="px-2 mb-4 shadow card">
-                <!-- Card Header - Dropdown -->
-                <div class="flex-row py-3 card-header d-flex align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
-                    <div class="dropdown no-arrow">
-                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="text-gray-400 fas fa-ellipsis-v fa-sm fa-fw"></i>
-                        </a>
-                        <div class="shadow dropdown-menu dropdown-menu-right animated--fade-in" aria-labelledby="dropdownMenuLink">
-                            <div class="dropdown-header">Dropdown Header:</div>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                    <div class="chart-area"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-                        <canvas id="myAreaChart" style="display: block; width: 1037px; height: 320px;" width="1037" height="320" class="chartjs-render-monitor"></canvas>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    <!-- Chart -->
+        <!-- Chart -->
         <div class="col-xl-6 col-md-12">
             <div class="px-2 mb-4 shadow card">
                 <!-- Card Header - Dropdown -->
@@ -166,6 +308,37 @@
                 </div>
             </div>
         </div>
+
+        <!-- Chart -->
+        <div class="col-xl-6 col-md-12">
+            <div class="px-2 mb-4 shadow card">
+                <!-- Card Header - Dropdown -->
+                <div class="flex-row py-3 card-header d-flex align-items-center justify-content-between">
+                    <h6 class="m-0 font-weight-bold text-primary">Status Nikah</h6>
+                    
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                    <div class="pt-4 pb-2 chart-pie"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+                        <canvas id="chart_2" width="486" height="245" style="display: block; width: 486px; height: 245px;" class="chartjs-render-monitor"></canvas>
+                    </div>
+                    <div class="mt-4 text-center small">
+                        <span class="mr-2">
+                            <i class="fa fa-circle text-primary" aria-hidden="true"></i> Belum Menikah
+                        </span>
+                        <span class="mr-2">
+                            <i class="fa fa-circle text-success" aria-hidden="true"></i> Menikah
+                        </span>
+                        <span class="mr-2">
+                            <i class="fa fa-circle text-warning" aria-hidden="true"></i> Cerai Mati
+                        </span>
+                        <span class="mr-2">
+                            <i class="fa fa-circle text-info" aria-hidden="true"></i> Cerai Hidup
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -173,129 +346,7 @@
 
 {% block script %}
 <script src="{% static 'js/Chart.min.js' %}"></script>
-<script>
-    // Set new default font family and font color to mimic Bootstrap's default styling
-    Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
-    Chart.defaults.global.defaultFontColor = '#858796';
-
-    function number_format(number, decimals, dec_point, thousands_sep) {
-    // *     example: number_format(1234.56, 2, ',', ' ');
-    // *     return: '1 234,56'
-    number = (number + '').replace(',', '').replace(' ', '');
-    var n = !isFinite(+number) ? 0 : +number,
-        prec = !isFinite(+decimals) ? 0 : Math.abs(decimals),
-        sep = (typeof thousands_sep === 'undefined') ? ',' : thousands_sep,
-        dec = (typeof dec_point === 'undefined') ? '.' : dec_point,
-        s = '',
-        toFixedFix = function(n, prec) {
-        var k = Math.pow(10, prec);
-        return '' + Math.round(n * k) / k;
-        };
-    // Fix for IE parseFloat(0.55).toFixed(0) = 0;
-    s = (prec ? toFixedFix(n, prec) : '' + Math.round(n)).split('.');
-    if (s[0].length > 3) {
-        s[0] = s[0].replace(/\B(?=(?:\d{3})+(?!\d))/g, sep);
-    }
-    if ((s[1] || '').length < prec) {
-        s[1] = s[1] || '';
-        s[1] += new Array(prec - s[1].length + 1).join('0');
-    }
-    return s.join(dec);
-    }
-
-    // Area Chart Example
-    var ctx = document.getElementById("myAreaChart");
-    var myLineChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],  //Data bulannya dimasukkan disini
-        datasets: [{
-        label: "Laporan ",
-        lineTension: 0.3,
-        backgroundColor: "rgba(78, 115, 223, 0.05)",
-        borderColor: "rgba(78, 115, 223, 1)",
-        pointRadius: 3,
-        pointBackgroundColor: "rgba(78, 115, 223, 1)",
-        pointBorderColor: "rgba(78, 115, 223, 1)",
-        pointHoverRadius: 3,
-        pointHoverBackgroundColor: "rgba(78, 115, 223, 1)",
-        pointHoverBorderColor: "rgba(78, 115, 223, 1)",
-        pointHitRadius: 10,
-        pointBorderWidth: 2,
-        data: [0, 2000, 3200, 520, 1200, 200, 1500, 2500, 2210, 3000, 5000, 4000],   //Data Bulanannnya dimasukkan disinii
-        }],
-    },
-    options: {
-        maintainAspectRatio: false,
-        layout: {
-        padding: {
-            left: 10,
-            right: 25,
-            top: 25,
-            bottom: 0
-        }
-        },
-        scales: {
-        xAxes: [{
-            time: {
-            unit: 'date'
-            },
-            gridLines: {
-            display: false,
-            drawBorder: false
-            },
-            ticks: {
-            maxTicksLimit: 7
-            }
-        }],
-        yAxes: [{
-            ticks: {
-            maxTicksLimit: 5,
-            padding: 10,
-            // Include a dollar sign in the ticks
-            //callback: function(value, index, values) {
-            //    return '$' + number_format(value);
-            //}
-            },
-            gridLines: {
-            color: "rgb(234, 236, 244)",
-            zeroLineColor: "rgb(234, 236, 244)",
-            drawBorder: false,
-            borderDash: [2],
-            zeroLineBorderDash: [2]
-            }
-        }],
-        },
-        legend: {
-        display: false
-        },
-        tooltips: {
-        backgroundColor: "rgb(255,255,255)",
-        bodyFontColor: "#858796",
-        titleMarginBottom: 10,
-        titleFontColor: '#6e707e',
-        titleFontSize: 14,
-        borderColor: '#dddfeb',
-        borderWidth: 1,
-        xPadding: 15,
-        yPadding: 15,
-        displayColors: false,
-        intersect: false,
-        mode: 'index',
-        caretPadding: 10,
-        callbacks: {
-            label: function(tooltipItem, chart) {
-            var datasetLabel = chart.datasets[tooltipItem.datasetIndex].label || '';
-            return datasetLabel + ' : ' + tooltipItem.yLabel;
-            }
-        }
-        }
-    }
-    });
-</script>
-
-<!---Chart 2-->
-<script>
+<script> //Chart 1
         // Set new default font family and font color to mimic Bootstrap's default styling
     Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
     Chart.defaults.global.defaultFontColor = '#858796';
@@ -310,6 +361,44 @@
           data: [{{count_male}}, {{count_female}}],
           backgroundColor: ['#4e73df', '#1cc88a'],
           hoverBackgroundColor: ['#2e59d9', '#17a673'],
+          hoverBorderColor: "rgba(234, 236, 244, 1)",
+        }],
+      },
+      options: {
+        maintainAspectRatio: false,
+        tooltips: {
+          backgroundColor: "rgb(255,255,255)",
+          bodyFontColor: "#858796",
+          borderColor: '#dddfeb',
+          borderWidth: 1,
+          xPadding: 15,
+          yPadding: 15,
+          displayColors: false,
+          caretPadding: 10,
+        },
+        legend: {
+          display: false
+        },
+        cutoutPercentage: 80,
+      },
+    });
+</script>
+
+<script> //Chart 2
+        // Set new default font family and font color to mimic Bootstrap's default styling
+    Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+    Chart.defaults.global.defaultFontColor = '#858796';
+
+    // Pie Chart Example
+    var ctx = document.getElementById("chart_2");
+    var chart_2 = new Chart(ctx, {
+      type: 'doughnut',
+      data: {
+        labels: ["Belum Menikah", "Menikah", "Cerai Mati", "Cerai Hidup"],
+        datasets: [{
+          data: [{{count_status_b_m}}, {{count_status_b_m}}, {{count_status_c_m}}, {{count_status_c_h}}],
+          backgroundColor: ['#4e73df', '#1cc88a', "#edd96f", '#b53caf'],
+          hoverBackgroundColor: ['#2e59d9', '#17a673', '#aba272', '#db76d6' ],
           hoverBorderColor: "rgba(234, 236, 244, 1)",
         }],
       },
