--- a/templates/dugout/snippets/sidebar.html
+++ b/templates/dugout/snippets/sidebar.html
@@ -1,4 +1,4 @@
-<ul class="text-white bg-warning sidebar-dark navbar-nav sidebar accordion" id="accordionSidebar">
+<ul class="text-white bg-info sidebar-dark navbar-nav sidebar accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
@@ -9,7 +9,7 @@
                 <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z"/>
               </svg>
         </div>
-        <div class="mx-3 sidebar-brand-text">Lapor Hoax</div>
+        <div class="mx-3 sidebar-brand-text">TanyaMandeh</div>
     </a>
 
     <!-- Divider -->
